[package]
name = "tourboxneo"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.1"
evdev = "0.13.2"
heck = "0.5.0"
help = "0.0.0"
lazy_static = "1.5.0"
libc = "0.2.186"
log = "0.4.29"
mio = "1"
mio-serial = "5.0.1"
num_enum = "0.7.6"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
signal-hook = "0.4.4"
signal-hook-mio = "0.3.0"
stderrlog = "0.6.0"
tempfile = "3.27.0"
toml = "1.1.0"
wayland-client = "0.31.14"
wayland-protocols-misc = { version = "0.3.12", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
xkbcommon = "0.9.0"
zbus = { version = "5.16.0", features = ["blocking", "blocking-api"] }
zvariant = "5.12.0"

[dependencies.clap]
version = "4.6.0"
features = ["derive"]
